--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,23 @@
 language: php
 
-php: 
-  - 5.3
+php:
   - 5.4
   - 5.5
+  - 5.6
+  - hhvm
 
 before_script:
   - curl -s http://getcomposer.org/installer | php
   - php composer.phar install --dev
 
 script: phpunit
+
+notifications:
+  emails:
+    - yuuki.takezawa@comnect.jp.net
+
+matrix:
+  allow_failures:
+    - php: 5.6
+    - php: hhvm
+  fast_finish: true
