--- a/composer.json
+++ b/composer.json
@@ -12,19 +12,19 @@
     "require": {
         "php": ">=5.4.0",
         "illuminate/support": "4.2.*",
-	"illuminate/view": "4.2.*",
-	"illuminate/config": "4.2.*",
-	"smarty/smarty": "3.*"
+	    "illuminate/view": "4.2.*",
+	    "illuminate/config": "4.2.*",
+	    "smarty/smarty": "3.*"
     },
     "require-dev": {
         "mockery/mockery": "0.8.0",
         "phpunit/phpunit": "3.7.*",
-	"symfony/framework-bundle": "2.*",
-	"symfony/console": "2.*"
+	    "symfony/framework-bundle": "2.*",
+	    "symfony/console": "2.*"
     },
     "autoload": {
         "psr-0": {
-            "Comnect\\Smarty\\": "src/"
+            "Comnect\\Smarty\\": "src"
         }
     },
     "minimum-stability": "stable"
