--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "illuminate/support": "4.2.*",
         "illuminate/view": "4.2.*",
         "illuminate/config": "4.2.*",
-        "smarty/smarty": "3.*"
+        "smarty/smarty": "3.*@stable"
     },
     "require-dev": {
         "mockery/mockery": "0.8.0",
